--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,8 +3,13 @@
 }
 
 h1 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'jost', sans-serif;
 }
+
+h2 {
+  font-family: 'jost', sans-serif;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
